--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,7 @@
 }
 
 .BA67C8v3 {
-  background-color: #5b0b69;
+  background-color: #6a2277;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   padding: 20px;
