--- a/views/gatos.ejs
+++ b/views/gatos.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gatitos</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>gatitos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
-    <h1 class="BA67C8">Gatos con EJS</h1>
-
-    <% for (let i in gatos) { %>
-        <a href="details/<%= i %>"><img class="gatitos" src="image/<%= gatos[i].img %>" alt="<%= gatos[i].id %>"></a>
-    
-    <% } %>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1 class="BA67C8">Gatos con EJS</h1>
+        <% for (let i in gatos) { %>
+          <a href="details/<%= i %>"><img class="gatitos" src="image/<%= gatos[i].img %>" alt="<%= gatos[i].id %>"></a>              
+        <% } %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
